updated using better html semantics

--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,16 @@
   padding: 0;
 }
 
-html {
+body {
   font-family: 'Outfit', sans-serif;
   font-size: 15px;
-}
-
-body {
   background-color: lightgray;
   min-height: 100vh;
   display: flex;
   align-items: center;
 }
 
-.container {
+main {
   max-width: 360px;
   margin: 0 auto;
 }
@@ -38,8 +35,9 @@ body {
   padding: 22px;
 }
 
-#message h2 {
-  color: hsl(218, 44%, 22%);
+#message h1 {
+  font-size: 23px;
+  color: hsl(218, 44%, 22%)
 }
 
 #message p {
